Fix placing coloured modelled consoles